--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar Sidequests</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How many things could fit inside you?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Chinnamasta – A Wild Goddess | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Mastery with Kriya | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>At what temperature should pizza be cooked?</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2609,7 +2609,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 04, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Chinnamasta – A Wild Goddess | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Mastery with Kriya | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>At what temperature should pizza be cooked?</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9703,7 +9703,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 04, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Vikkstar Sidequests</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>How many things could fit inside you?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
