--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>3 long term strategies that work (Backtested with Rules)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Mastery with Kriya | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>3 long term strategies that work (Backtested with Rules)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Trading Long vs. Short: Profitability Analysis #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Mastery with Kriya | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
