--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How many things could fit inside you?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Making pizza #piz #pizza #food #foodie #pizza #pizza #pizzastreetfood #food #streetfood #cooking #</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1619,7 +1619,7 @@
                     <div class="video-info">
                         <h3>Whats the Chance the Market Closes Higher After a Gap Up?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1648,9 +1648,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
                     <div class="video-info">
-                        <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                        <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">2 weeks ago</div>
                     </div>
@@ -6161,7 +6161,7 @@
                         <div class="video-info">
                             <h3>Whats the Chance the Market Closes Higher After a Gap Up?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Making pizza #piz #pizza #food #foodie #pizza #pizza #pizzastreetfood #food #streetfood #cooking #</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10079,9 +10079,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
                         <div class="video-info">
-                            <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                            <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">2 weeks ago</div>
                         </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>How many things could fit inside you?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
